(rule
 (progn
  (copy ../../src_lockfree/llist.ml llist.ml)
  (copy ../../src_lockfree/bits.ml bits.ml)
  (copy ../../src_lockfree/size.ml size.ml)))

(test
 (name llist_dscheck)
 (modules llist size bits llist_dscheck)
 (libraries atomic transparent_atomic dscheck alcotest multicore-magic))

(test
 (name qcheck_llist)
 (modules qcheck_llist)
 (libraries saturn qcheck qcheck-alcotest))

(test
 (name stm_llist)
 (modules stm_llist)
 (libraries saturn qcheck-stm.sequential qcheck-stm.domain)
 (action
  (run %{test} --verbose)))
