(test
 (name qcheck_llist)
 (libraries lockfree qcheck qcheck-alcotest)
 (modules qcheck_llist))

(test
 (name qcheck_htbl)
 (libraries lockfree qcheck qcheck-alcotest)
 (modules qcheck_htbl))

(test
 (name stm_htbl)
 (modules stm_htbl)
 (libraries lockfree qcheck-stm.sequential qcheck-stm.domain)
 (action
  (run %{test} --verbose)))
